<resources>
    <string name="app_name">Brain Trainer</string>
    <string name="go">Go!</string>
    <string name="_0_0">0/0</string>
    <string name="_30s">30s</string>
    <string name="choose1">choose1</string>
    <string name="choose2">choose2</string>
    <string name="choose3">choose3</string>
    <string name="choose4">choose4</string>
    <string name="_31_7">31+7</string>
    <string name="set_timer_in_secounds_here">set timer in secounds here</string>
    <string name="wrong">Wrong!</string>
    <string name="correct">Correct!</string>
</resources>